:heavy_plus_sign: Add landing page images

--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "start": "npm run develop",
     "develop": "gatsby develop",
     "dev": "npm run develop",
-    "deploy": "node gatsby build --prefix-paths && gh-pages -d public -r https://$GH_TOKEN@github.com/bdTechies/prozuktischool.com.git",
+    "deploy": "npm run build && gh-pages -d public",
     "serve": "gatsby serve",
     "build": "gatsby build",
     "build:pp": "gatsby build --prefix-paths",
