--- a/content/author.yaml
+++ b/content/author.yaml
@@ -1,14 +1,4 @@
-- id: sh4hids
-  fullName: শহীদুল ইসলাম মজুমদার
-  bio: Very curious about this world and blogging whenever learned something new
-  twitter: sh4hids
-
-- id: ksharifbd
-  fullName: কামাল শরীফ
-  bio: Very curious about this world and blogging whenever learned something new
-  twitter: ksharifbd
-
-- id: techdiary.dev
-  fullName: টেকডায়েরি
-  bio: বাংলার প্রোগ্রামিং নেটওয়ার্ক
-  twitter: rayhan095
+- id: madrasatulilm
+  fullName: মাদ্‌রাসাতুল ইল্‌ম
+  bio: বিশুদ্ধ ইসলামি জ্ঞানের এক নির্ভরযোগ্য প্রতিষ্ঠান
+  twitter: madrasatulilm
