--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@astrojs/mdx": "^4.3.1",
         "@astrojs/react": "^4.3.0",
         "@radix-ui/react-dropdown-menu": "^2.1.15",
+        "@radix-ui/react-hover-card": "^1.1.14",
         "@radix-ui/react-menubar": "^1.1.15",
         "@radix-ui/react-slot": "^1.2.3",
         "@tailwindcss/vite": "^4.1.11",
