--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "prettier": "^3.6.2",
         "prettier-plugin-astro": "^0.14.1",
         "prettier-plugin-tailwindcss": "^0.6.14",
+        "sharp": "^0.34.3",
         "tw-animate-css": "^1.3.6",
         "typescript-eslint": "^8.38.0"
     }
