--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
               uses: actions/checkout@v4
             - name: Install pnpm
               uses: pnpm/action-setup@v4
+              with:
+                  version: 10
             - name: Install, build, and upload your site
               uses: withastro/action@v2
               # with:
