--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "madrasatulilm.com",
     "type": "module",
     "version": "0.0.1",
+    "packageManager": "pnpm@10.13.1",
     "scripts": {
         "dev": "astro dev",
         "build": "astro build",
