--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "check:lint": "eslint .",
         "lint": "eslint --fix .",
         "check:format": "prettier --list-different  \"**/*.{js,jsx,ts,tsx,md,mdx,astro}\"",
-        "format": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx,astro}\""
+        "format": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx,astro}\"",
+        "postbuild": "pagefind"
     },
     "dependencies": {
         "@astro-community/astro-embed-youtube": "^0.5.6",
@@ -40,6 +41,7 @@
     "devDependencies": {
         "@eslint/compat": "^1.3.1",
         "@eslint/js": "^9.32.0",
+        "@pagefind/default-ui": "^1.3.0",
         "@typescript-eslint/parser": "^8.38.0",
         "eslint": "^9.32.0",
         "eslint-config-prettier": "^10.1.8",
@@ -47,6 +49,7 @@
         "eslint-plugin-prettier": "^5.5.3",
         "eslint-plugin-react": "^7.37.5",
         "globals": "^16.3.0",
+        "pagefind": "^1.3.0",
         "prettier": "^3.6.2",
         "prettier-plugin-astro": "^0.14.1",
         "prettier-plugin-tailwindcss": "^0.6.14",
